<resources>
    <string name="app_name">Aktivitetsbanken</string>
    <string name="age_group_TRACKER">Spårare</string>
    <string name="age_group_DISCOVERER">Upptäckare</string>
    <string name="age_group_ADVENTURER">Äventyrare</string>
    <string name="age_group_CHALLENGER">Utmanare</string>
    <string name="age_group_ROVER">Rover</string>
    <string name="category_concept_SCOUTSOWN">Andakt, stilla stund</string>
    <string name="category_concept_CEREMONY">Ceremonier</string>
    <string name="category_concept_DISCUSSION">Diskussion</string>
    <string name="category_concept_HIKE">Hajk</string>
    <string name="category_concept_HANDICRAFT">Hantverk, pyssel</string>
    <string name="category_concept_CAMPFIRE">Lägerbål</string>
    <string name="category_concept_PLAYTIME">Lekar</string>
    <string name="category_concept_COOK">Matlagning</string>
    <string name="category_concept_OUTDOOR_INLAND">Friluftsliv land</string>
    <string name="category_concept_OUTDOOR_LAKE">Friluftsliv sjö</string>
    <string name="category_concept_ART">Teater, musik, sång</string>
    <string name="category_concept_OUTDOOR">Utomhus</string>
    <string name="category_track_ACTIVE_GROUP">Aktiv i gruppen</string>
    <string name="category_track_ACTIVE_COMMUNITY">Aktiv i samhället</string>
    <string name="category_track_PERSONAL_VIEWS">Egna värderingar</string>
    <string name="category_track_EXISTENCE">Existens</string>
    <string name="category_track_CREATIVE_EXPRESSION">Fantasi och kreativt uttryck</string>
    <string name="category_track_PHYSICAL_CHALLENGES">Fysiska utmaningar</string>
    <string name="category_track_UNDERSTANDING_SOCIETY">Förståelse för omvärlden</string>
    <string name="category_track_ANALYTIC_THINKING">Kritiskt tänkande</string>
    <string name="category_track_NATURE">Känsla för naturen</string>
    <string name="category_track_LEADERSHIP">Ledarskap</string>
    <string name="category_track_PROBLEM_SOLVING">Problemlösning</string>
    <string name="category_track_RELATIONS">Relationer</string>
    <string name="category_track_SELF_ESTEEM">Självinsikt och självkänsla</string>
    <string name="category_track_PHYSICAL_HEALTH">Ta hand om sin kropp</string>
    <string name="ageGroupListItemSubtitleFormat">%1$d-%2$d år</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in fermentum dui. Etiam egestas
        ultricies tellus id venenatis. Maecenas metus nulla, molestie non ipsum eu, aliquam scelerisque nisi.
        Suspendisse eget justo nisl. Maecenas ullamcorper libero quis ligula dignissim, nec laoreet massa blandit.
        Nullam eget urna sed velit ornare adipiscing. Class aptent taciti sociosqu ad litora torquent per conubia
        nostra, per inceptos himenaeos. Pellentesque congue est a sollicitudin pretium. Sed in lorem venenatis, lobortis
        mi ac, pretium velit. Etiam enim sapien, bibendum quis consequat sit amet, scelerisque ut tellus. Etiam lobortis
        tortor ac lectus aliquam, vitae porttitor est convallis. Etiam feugiat faucibus nunc eu tincidunt.
    </string>
    <string name="activity_tab_photos">Bilder och sånt</string>
    <string name="activity_tab_description">Om</string>
    <string name="startTabHome">Hem</string>
    <string name="startTabCategories">Kategorier</string>
    <string name="startTabAgeGroups">Ålder</string>
    <string name="startTabTracks">Målspår</string>
    <string name="startTabFeatured">Utvalda</string>
    <string name="startTabRecentActivities">Visa igen?</string>
    <string name="searchResultTitle">Sökresultat</string>
    <string name="searchResultTitleCategoryTrack">Målspår %1$s</string>
    <plurals name="searchResultSubtitleCategoryTrack">
        <item quantity="one">En aktivitet</item>
        <item quantity="other">%d aktiviteter</item>
    </plurals>
    <string name="searchResultTitleCategoryConcept">Upplägg %1$s</string>
    <string name="searchResultTitleAgeGroup">För %1$s</string>
    <string name="startIntroText">Utvalda aktiviterer syns här nedan. Använd flikarna här ovanför för att hitta andra
        aktivititer.
    </string>
    <string name="activityFactAgeAndParticipants">%1$s år, %2$s pers.</string>
    <string name="activityFactAge">%1$s år.</string>
    <string name="activityFactParticipants">%1$s pers.</string>
    <string name="activity_tab_material">Material</string>
    <string name="activitiesListItemParticipants">%1$s pers.</string>
    <string name="activitiesListItemAges">%1$s år</string>
    <string name="activitiesListItemTime">%1$s min</string>
    <string name="activitiesListItemFavouritesCount">%1$s</string>
    <string name="activity_introduction">Introduktion</string>
    <string name="activity_preparations">Förberedelser</string>
    <string name="activity_how_to_do">Genomförande</string>
    <string name="activity_safety">Säkerhet</string>
    <string name="activity_notes">Noteringar</string>
    <string name="startTabSearch">Sök</string>
    <string name="searchResultIsEmpty">Inga träffar</string>
    <string name="sortByName">Sortera efter namn</string>
    <string name="sortByTime">Sortera efter tidsåtgång</string>
    <string name="sortByParticipants">Sortera efter antal deltagare</string>
    <string name="sortByAges">Sortera efter ålder</string>
    <string name="activitiesListMenuSort">Sortera</string>
    <string name="scoutmethod">Scoutmetod</string>
    <string name="startTabFavourites">Favoriter</string>
    <string name="startTabOverallFavourites">Mångas favoriter</string>
    <string name="searchResultDefaultEmptyMessage">Listan är tom.</string>
    <string name="searchResultDefaultEmptyHeader">Inga träffar</string>
    <string name="favouritesEmptyHeader">Du har inga favoriter. Ännu.</string>
    <string name="favouritesEmptyMessage">Tryck på \u2764 när du öppnat en aktivitet för den ska synas här.</string>
    <string name="overallFavouritesEmptyHeader">Tyvärr så är listan tom just nu.</string>
    <string name="overallFavouritesEmptyMessage">Här visas aktiviteter som många har som favoriter.</string>
    <string name="featuredEmptyHeader">Utvalda aktiviteter saknas.</string>
    <string name="featuredEmptyMessage">Just har inga aktiviteter valts ut av någon redaktör.</string>
    <string name="searchResultEmptyTitle">Tyvärr, inga träffar.</string>
    <string name="searchResultEmptyMessage">Inga aktiviteter passade in på dina sökvillkor.</string>
    <string name="searchTextLabel">Text i namn eller beskrivning</string>
    <string name="searchAgeGroupsLabel">Passande åldergrupper</string>
    <string name="searchTimeLabel">Tidsåtgång</string>
    <string name="searchOtherConditionsLabel">Övriga sökalternativ</string>
    <string name="searchFeaturedOnlyLabel">Enbart utvalda av redaktör</string>
    <string name="searchFavouritesOnlyLabel">Enbart mina favoriter</string>
    <string name="searchButtonLabel">Sök...</string>
    <string name="searchCategoryOptionAny">Alla kategorier</string>
    <string name="searchTimeOptionAny">Både korta och långa aktiviteter</string>
    <string name="searchTimeOption5min">Högst 5 minuter</string>
    <string name="searchTimeOption15min">Högst 15 minuter</string>
    <string name="searchTimeOption15to30min">Omkring 15-30 min</string>
    <string name="searchTimeOption30to60min">Omkring 30-60 min</string>
    <string name="searchTimeOption1to2hours">1-2 timmar</string>
    <string name="searchTimeOptionMoreThan2hours">Över 2 timmar</string>
    <string name="drawer_open">Öppna</string>
    <string name="drawer_close">Stäng</string>
    <string name="drawer_start_header">Start</string>
    <string name="drawer_search_history_header">Tidigare sökningar</string>
    <string name="show_all">Visa alla...</string>
    <string name="title_filter_visitor_age_range">%1$d-%2$d år</string>
    <string name="title_filter_visitor_age_younger">&lt;%1$d år</string>
    <string name="title_filter_visitor_age_older">&gt;%1$d år</string>
    <string name="title_filter_visitor_time_range">%1$d-%2$d min</string>
    <string name="title_filter_visitor_time_younger">&lt;%1$d min</string>
    <string name="title_filter_visitor_time_older">&gt;%1$d min</string>
    <string name="title_filter_visitor_favourite">favoriter</string>
    <string name="title_filter_visitor_incategory">kategori %s</string>
    <string name="title_filter_visitor_featured">utvalda</string>
    <string name="title_filter_visitor_and">,\u0020</string>
    <string name="title_filter_visitor_or">,\u0020</string>
    <string name="title_filter_visitor_random">%d slumpade</string>
    <string name="title_filter_visitor_overall_favourites">mångas favoriter</string>
    <string name="subtitle_filter_visitor_age_range">för %1$d-%2$d år</string>
    <string name="subtitle_filter_visitor_age_younger">för &lt;%1$d år</string>
    <string name="subtitle_filter_visitor_age_older">för &gt;%1$d år</string>
    <string name="subtitle_filter_visitor_time_range">som tar %1$d-%2$d min</string>
    <string name="subtitle_filter_visitor_time_younger">som tar &lt;%1$d min</string>
    <string name="subtitle_filter_visitor_time_older">som tar &gt;%1$d min</string>
    <string name="subtitle_filter_visitor_favourite">är favoriter</string>
    <string name="subtitle_filter_visitor_incategory">har kategorin %s</string>
    <string name="subtitle_filter_visitor_featured">är utvalda</string>
    <string name="subtitle_filter_visitor_and">\u0020och\u0020</string>
    <string name="subtitle_filter_visitor_or">\u0020eller\u0020</string>
    <string name="subtitle_filter_visitor_random">%d slumpade</string>
    <string name="subtitle_filter_visitor_overall_favourites">De %d mest gillade</string>
    <string name="startTabSpontaneousActivity">Spontanaktivitet</string>
    <string name="welcomeWidgetTitle">Välkomstmeddelande</string>
    <string name="startSelectWidgets">Välj kort...</string>
    <string name="button_positive">Okej</string>
    <string name="button_close">Stäng</string>
    <string name="button_save">Spara</string>
    <string name="searchHistoryEmptyMessage">Du har ännu inte gjort några sökningar.</string>
    <string name="searchHistoryEmptyTitle">Din sökhistorik är tom</string>
    <string name="noSpontaneousActivitiesFoundTitle">Oj, inga hittades</string>
    <string name="noSpontaneousActivitiesFoundMessage">Inga snabba aktiviteter hittades för denna åldersgrupp</string>
    <string name="noActivitiesInCategoryTitle">Tom kategori</string>
    <string name="auth_log_out">Logga ut</string>
    <string name="auth_logged_out_promo">Logga in för att göra appen bättre för dig och andra.</string>
    <string name="auth_logged_out_better_text">När du är inloggad kan du till exempel:\n
        - favorit-markera\n
        - betygsätta aktiviteter\n
        \nOm vi hjälps åt att betygsätta,
        kommentera och förbättra så
        blir det enklare för alla
        att hitta nya, bra och
        roliga aktiviteter.
    </string>
    <string name="auth_logged_in_promo">Hej%1$s. Eftersom du är inloggad kan du göra en massa smarta grejer.</string>
    <string name="auth_logged_in_smarter_text">Du kan till exempel:\n
        - favorit-markera\n
        - betygsätta aktiviteter
    </string>
    <string name="auth_ok_i_got_it">Ok, jag fattar</string>
    <string name="searchTopRatedOnlyLabel">Minst 4 i medelbetyg</string>
    <string name="profileNameHeader">Namn</string>
    <string name="profileEmailHeader">E-postadress</string>
    <string name="profileRoleHeader">Roll</string>
    <string name="profileRoleDescriptionTemplate">Som %1$s är du alltid redo eftersom du kan göra allt det här:%2$s</string>
    <string name="profileApiHeader">API-nyckel</string>
    <string name="profileApiDescription">En API-nyckel är ett sorts lösenord som
        appen använder när den pratar med Aktivitetsbankens server.
    </string>
    <string name="profileShowDetails">Visa detaljer</string>
</resources>