<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_logged_out_container"
        android:layout_gravity="center_horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/auth_google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_logged_out_promo"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_logged_out_better_text"
                android:layout_marginTop="@dimen/defaultMargin"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/auth_ok_i_got_it"
                android:id="@+id/auth_logged_out_message_collapse_button"
                style="@style/ClickableLabel"
                android:layout_gravity="right"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_progress_container"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auth_logged_in_container"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_logged_in_promo"
            android:id="@+id/auth_logged_in_text"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textSize="@dimen/mediumTextSize" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_logged_in_smarter_text"
                android:layout_marginTop="@dimen/defaultMargin"/>

            <TextView
                android:layout_width="wrap_content"
                style="@style/ClickableLabel"
                android:id="@+id/auth_logged_in_message_collapse_button"
                android:layout_gravity="right"
                android:text="@string/auth_ok_i_got_it"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/auth_log_out"
            android:id="@+id/auth_log_out_button"
            style="@style/ClickableLabel"
            android:gravity="center" />

    </LinearLayout>

</FrameLayout>