<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButtonLabel"
        android:id="@+id/searchButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignRight="@+id/searchButton"
        android:layout_above="@+id/searchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/iconButtonMargin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

<!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchTextLabel"
                android:id="@+id/textView"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />
-->

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sökord:"
                        android:id="@+id/textView"
                        android:layout_weight="0" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/mediumTextSize"
                        android:id="@+id/searchText"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchAgeGroupsLabel"
                android:id="@+id/textView1"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />
-->

            <!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchTimeLabel"
                android:id="@+id/textView2"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />
-->

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchTimeSpinner"
                android:layout_marginTop="@dimen/defaultMargin"
                android:spinnerMode="dropdown" />

<!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchCategoryLabel"
                android:id="@+id/textView2"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />
-->

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchCategorySpinner"
                android:layout_marginTop="@dimen/defaultMargin"
                android:spinnerMode="dropdown" />

<!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchOtherConditionsLabel"
                android:id="@+id/textView3"
                android:layout_marginTop="@dimen/defaultMargin"
                android:textSize="@dimen/mediumTextSize" />
-->

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5">

                <ImageView
                    android:id="@+id/searchAgeTrackerLogo"
                    android:src="@drawable/logo_tracker"
                    style="@style/VerticalCheckbox.Top"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:background="?android:attr/selectableItemBackground" />

                <ImageView
                    android:id="@+id/searchAgeDiscovererLogo"
                    android:src="@drawable/logo_discoverer"
                    style="@style/VerticalCheckbox.Top"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:background="?android:attr/selectableItemBackground" />

                <ImageView
                    android:id="@+id/searchAgeAdventurerLogo"
                    android:src="@drawable/logo_adventurer"
                    style="@style/VerticalCheckbox.Top"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:background="?android:attr/selectableItemBackground" />

                <ImageView
                    android:id="@+id/searchAgeChallengerLogo"
                    android:src="@drawable/logo_challenger"
                    style="@style/VerticalCheckbox.Top"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:background="?android:attr/selectableItemBackground" />

                <ImageView
                    android:id="@+id/searchAgeRoverLogo"
                    android:src="@drawable/logo_rover"
                    style="@style/VerticalCheckbox.Top"
                    android:layout_row="0"
                    android:layout_column="4"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/searchAgeTrackerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8-9"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/searchAgeDiscovererLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10-12"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/searchAgeAdventurerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13-15"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/searchAgeChallengerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15-18"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:id="@+id/searchAgeRoverLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19-25"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:attr/selectableItemBackground" />

                <CheckBox
                    android:id="@+id/searchAgeTracker"
                    style="@style/VerticalCheckbox.Bottom"
                    android:layout_row="2"
                    android:layout_column="0" />

                <CheckBox
                    android:id="@+id/searchAgeDiscoverer"
                    style="@style/VerticalCheckbox.Bottom"
                    android:layout_row="2"
                    android:layout_column="1" />

                <CheckBox
                    android:id="@+id/searchAgeAdventurer"
                    style="@style/VerticalCheckbox.Bottom"
                    android:layout_row="2"
                    android:layout_column="2" />

                <CheckBox
                    android:id="@+id/searchAgeChallenger"
                    style="@style/VerticalCheckbox.Bottom"
                    android:layout_row="2"
                    android:layout_column="3" />

                <CheckBox
                    android:id="@+id/searchAgeRover"
                    style="@style/VerticalCheckbox.Bottom"
                    android:layout_row="2"
                    android:layout_column="4" />
            </GridLayout>

<!--
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchFeaturedOnlyLabel"
                android:id="@+id/searchFeaturedOnly"
                android:layout_marginTop="@dimen/defaultMargin"
                android:singleLine="false" />
-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchFavouritesOnlyLabel"
                android:layout_marginTop="@dimen/defaultMargin"
                android:id="@+id/searchFavouritesOnly" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchTopRatedOnlyLabel"
                android:layout_marginTop="@dimen/defaultMargin"
                android:id="@+id/searchTopRatedOnly" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>